update: exp2025_03_19_testing_dia_augmentation

--- a/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation.ipynb
+++ b/experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/dialogue_augmentation.ipynb
@@ -67,13 +67,12 @@
     "from tqdm import tqdm\n",
     "import pickle\n",
     "import numpy as np\n",
-    "# from utils import call_llm_api\n",
-    "from prompts import naive_augmentation_prompt"
+    "from augmentation_prompts import naive_augmentation_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dialogue Augmentation"
+    "## Naive Dialogue Augmentation"
    ]
   },
   {
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2431,133 +2430,119 @@
     "            )\n",
     "        \n",
     "    new_data.append(example)\n",
-    "    with open(\"gen_dataset_augment_naive\", \"wb\") as fp:\n",
+    "    with open(\"../data/gen_dataset_augment_naive\", \"wb\") as fp:\n",
     "        pickle.dump(new_data, fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"test\", \"rb\") as fp:   #Pickling\n",
-    "    b = pickle.load(fp)\n",
-    "b"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checking"
+    "# One-shot Dialogue Augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from augmentation_prompts import one_shot_augmentation_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "augmentation_prompt = PromptTemplate.from_template(one_shot_augmentation_prompt)\n",
+    "\n",
+    "class DialogueSequence(BaseModel):\n",
+    "    result: List[DialogueMessage]\n",
+    "\n",
+    "model = ChatOpenAI(\n",
+    "    model=\"gpt-4o-mini\", \n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"), \n",
+    "    base_url=os.getenv(\"OPENAI_BASE_URL\"), \n",
+    "    temperature=0.7\n",
+    ")\n",
+    "\n",
+    "parser = JsonOutputParser(pydantic_object=DialogueSequence)\n",
+    "\n",
+    "chain = augmentation_prompt | model | parser"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "from dialogue2graph.metrics.no_llm_metrics.metrics import match_roles, is_correct_length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_no_duplicates(utterances_1, utterances_2):\n",
-    "    common_elements = set(utterances_1) & set(utterances_2)    \n",
-    "    if common_elements:\n",
-    "        return False    \n",
-    "    return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_diagonal_similarity(utterances_1, utterances_2, embedder=os.getenv('EMBEDDER_MODEL')):\n",
-    "    model = SentenceTransformer(embedder)\n",
-    "    embeddings_1 = model.encode(utterances_1)\n",
-    "    embeddings_2 = model.encode(utterances_2)\n",
-    "\n",
-    "    model.similarity_fn_name = 'cosine'    \n",
-    "    similarities = model.similarity(embeddings_1, embeddings_2)\n",
-    "\n",
-    "    diagonal_elements = np.diag(similarities)\n",
-    "    non_diagonal_elements = similarities[np.where(~np.eye(len(similarities), dtype=bool))]\n",
-    "    \n",
-    "    for i in range(len(diagonal_elements)):\n",
-    "        if diagonal_elements[i] <= non_diagonal_elements.max():\n",
-    "            return False\n",
-    "            \n",
-    "    return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_dialogues(dialogue_1, dialogue_2):\n",
-    "    utterances_1 = [uttr['text'] for uttr in dialogue_1]\n",
-    "    utterances_2 = [uttr['text'] for uttr in dialogue_2]\n",
-    "        \n",
-    "    no_duplicates = check_no_duplicates(utterances_1, utterances_2)\n",
-    "    similarity = check_diagonal_similarity(utterances_1, utterances_2)\n",
-    "\n",
-    "    dialogue_1 = Dialogue.from_list(dialogue_1)\n",
-    "    dialogue_2 = Dialogue.from_list(dialogue_2)\n",
-    "    matching_roles = match_roles(dialogue_1, dialogue_2)\n",
-    "    correct_length = is_correct_length(dialogue_1, dialogue_2)\n",
-    "\n",
-    "    report = {\n",
-    "        'value' : None,\n",
-    "        'description' : {\n",
-    "            'no_duplicates' : no_duplicates,\n",
-    "            'diag_similarity' : similarity,\n",
-    "            'matching_roles' : matching_roles,\n",
-    "            'correct_length' : correct_length\n",
-    "        }\n",
-    "    }\n",
-    "\n",
-    "    if (no_duplicates and similarity and matching_roles and correct_length):\n",
-    "        report['value'] = True\n",
-    "    else:\n",
-    "        report['value'] = False\n",
-    "    \n",
-    "    return report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'value': False,\n",
-       " 'description': {'no_duplicates': True,\n",
-       "  'diag_similarity': False,\n",
-       "  'matching_roles': True,\n",
-       "  'correct_length': True}}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmenting example 2:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 12/12 [00:57<00:00,  4.83s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmenting example 3:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:33<00:00,  3.71s/it]\n"
+     ]
     }
    ],
    "source": [
-    "compare_dialogues(dialogue, result)"
+    "new_data = []\n",
+    "\n",
+    "for i, example in enumerate(dataset['train']):\n",
+    "    if i == 0 or i == 1:\n",
+    "        continue\n",
+    "\n",
+    "    print(f'Augmenting example {i}:')\n",
+    "    topic = example['topic']\n",
+    "    all_dialogues = example['dialogues']\n",
+    "\n",
+    "    example['augmented_dialogues'] = []\n",
+    "\n",
+    "    for element in tqdm(all_dialogues, total=len(all_dialogues)):\n",
+    "        try:\n",
+    "            orig_dialogue = element['messages']        \n",
+    "            aug_dialogue = chain.invoke({\n",
+    "                \"topic\": topic,\n",
+    "                \"dialogue\": orig_dialogue\n",
+    "            })\n",
+    "        except Exception as e:\n",
+    "            aug_dialogue = e\n",
+    "        \n",
+    "        example['augmented_dialogues'].append(\n",
+    "                {\n",
+    "                    'id' : element['id'],\n",
+    "                    'messages' : aug_dialogue\n",
+    "                    }\n",
+    "                )\n",
+    "                    \n",
+    "    new_data.append(example)\n",
+    "    with open(\"../data/gen_dataset_augment_one-shot_2\", \"wb\") as fp:\n",
+    "        pickle.dump(new_data, fp)\n",
+    "    \n",
+    "    if i == 3:\n",
+    "        break"
    ]
   }
  ],
