update: exp2025_03_26_dia_augmentation

--- a/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation_check.ipynb
+++ b/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "100"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 21970.06it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 60047.30it/s]\n"
      ]
     },
     {
@@ -101,7 +101,7 @@
        " [])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,8 +118,94 @@
     "\n",
     "    try:\n",
     "        for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
-    "            if (is_correct_length_modified(orig_dia, aug_dia) and\n",
-    "                match_roles_modified(orig_dia, aug_dia)):\n",
+    "            if is_correct_length_modified(orig_dia, aug_dia):\n",
+    "                true_count += 1\n",
+    "            else:\n",
+    "                failure_examples.append((i, j))\n",
+    "    except Exception as e:\n",
+    "        errors.append((i, j, e))\n",
+    "\n",
+    "    if true_count == len(augmented_dialogues):\n",
+    "        new_data.append(example)\n",
+    "\n",
+    "failure_examples, errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking failure examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, j in failure_examples:\n",
+    "    orig_dia = data[i]['dialogues'][j]['messages']\n",
+    "    aug_dia = data[i]['augmented_dialogues'][j]['messages']\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21, 19)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(orig_dia), len(aug_dia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 22443.84it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([], [])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errors = []\n",
+    "failure_examples = []\n",
+    "new_data = []\n",
+    "\n",
+    "for i, example in enumerate(tqdm(data)):\n",
+    "    dialogues = [dial['messages'] for dial in example['dialogues']]\n",
+    "    augmented_dialogues = [dial['messages'] for dial in example['augmented_dialogues']]\n",
+    "    true_count = 0\n",
+    "\n",
+    "    try:\n",
+    "        for j, (orig_dia, aug_dia) in enumerate(zip(dialogues, augmented_dialogues)):\n",
+    "            if match_roles_modified(orig_dia, aug_dia):\n",
     "                true_count += 1\n",
     "            else:\n",
     "                failure_examples.append((i, j))\n",
@@ -946,7 +1032,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'participant': 'assistant',\n",
+       "  'text': 'Hello! How can I assist you with your rewards and promo codes today?'},\n",
+       " {'participant': 'user',\n",
+       "  'text': 'I want to combine my rewards with a promo code.'},\n",
+       " {'participant': 'assistant',\n",
+       "  'text': 'Sure, I can help with that. Please provide your account number.'},\n",
+       " {'participant': 'user', 'text': 'My account number is 123456.'},\n",
+       " {'participant': 'assistant',\n",
+       "  'text': \"Thank you. I've verified your account. Would you like to apply a promo code now?\"},\n",
+       " {'participant': 'user',\n",
+       "  'text': 'Actually, I want to change my account number.'},\n",
+       " {'participant': 'assistant',\n",
+       "  'text': 'Of course! Please provide your new account number.'},\n",
+       " {'participant': 'user', 'text': '987654'},\n",
+       " {'participant': 'assistant',\n",
+       "  'text': 'Sure, I can help with that. Please provide your account number.'},\n",
+       " {'participant': 'user', 'text': 'My account number is 123456.'},\n",
+       " {'participant': 'assistant',\n",
+       "  'text': \"Thank you. I've verified your account. Would you like to apply a promo code now?\"},\n",
+       " {'participant': 'user', 'text': 'Yes, I have a promo code to apply.'},\n",
+       " {'participant': 'assistant', 'text': 'Great! Please enter your promo code.'},\n",
+       " {'participant': 'user', 'text': 'MYPROMO10'},\n",
+       " {'participant': 'assistant',\n",
+       "  'text': \"I've successfully applied your promo code along with your rewards. Is there anything else I can help with?\"},\n",
+       " {'participant': 'user', 'text': \"No, that's all, thank you.\"},\n",
+       " {'participant': 'assistant', 'text': \"You're welcome! Have a great day.\"}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dialogues[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1151,7 @@
        "   'Glad to help! Have a great day ahead.']}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
