--- a/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation.ipynb
+++ b/experiments/exp2025_03_26_dia_augmentation/exp2025_03_26_dia_augmentation/dia_augmentation.ipynb
@@ -575,31 +575,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "9\n",
-      "13\n",
-      "12\n",
-      "5\n",
-      "17\n",
-      "10\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for example in dataset['train'].select(range(2, 10)):\n",
-    "    print(len(example['dialogues']))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -740,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -885,14 +860,14 @@
     }
    ],
    "source": [
-    "new_data_2 = augment_dialogue_data(\n",
+    "new_data = augment_dialogue_data(\n",
     "    dataset['train'].select(range(10, 20)), variations_augmentation_prompt_9,\n",
     "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_20\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1012,7 @@
     }
    ],
    "source": [
-    "new_data_3 = augment_dialogue_data(\n",
+    "new_data = augment_dialogue_data(\n",
     "    dataset['train'].select(range(20, 30)), variations_augmentation_prompt_9,\n",
     "    \"gpt-4o-mini-2024-07-18\", \"../data/gen_dataset_augment_uttr-vars_9_30\")"
    ]
@@ -2139,6 +2114,25 @@
    "source": [
     "with open(\"../data/gen_dataset_augment_uttr-vars_9\", \"wb\") as fp:\n",
     "    pickle.dump(all_data, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"../data/gen_dataset_augment_uttr-vars_9.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    json.dump(all_data, file, indent=4)"
    ]
   }
  ],
