--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/peshkichev/miniconda3/envs/py311/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dialogue2graph.pipelines.models import ModelsAPI\n",
     "models = ModelsAPI()"
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +287,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in range(20)[0:10:2]:\n",
+    "    print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,6 +434,220 @@
    "source": [
     "graph = pipeline.invoke(\"transfer.json\")\n",
     "graph.visualise_short(\"transfer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test_metrics_data.json\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dialogue2graph.pipelines.core.graph import Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph(data[2]['graph']).visualise_short(\"What\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'edges': [{'source': 2,\n",
+       "   'target': 3,\n",
+       "   'utterances': [\"Yes, I checked but it still doesn't sync.\"]},\n",
+       "  {'source': 3,\n",
+       "   'target': 4,\n",
+       "   'utterances': ['Alright, please guide me through the steps.']},\n",
+       "  {'source': 4,\n",
+       "   'target': 6,\n",
+       "   'utterances': [\"I've followed the steps and it seems to be working now.\"]},\n",
+       "  {'source': 2,\n",
+       "   'target': 8,\n",
+       "   'utterances': [\"I think I'll handle it later. Thanks anyway.\"]},\n",
+       "  {'source': 4,\n",
+       "   'target': 7,\n",
+       "   'utterances': ['I want to change the time zone instead.']},\n",
+       "  {'source': 7,\n",
+       "   'target': 4,\n",
+       "   'utterances': [\"Sure, let's adjust the time zone settings.\"]},\n",
+       "  {'source': 5,\n",
+       "   'target': 6,\n",
+       "   'utterances': [\"After adjusting, it still doesn't sync.\"]},\n",
+       "  {'source': 3,\n",
+       "   'target': 5,\n",
+       "   'utterances': ['Time zone settings are correct, but the issue persists.']},\n",
+       "  {'source': 6,\n",
+       "   'target': 8,\n",
+       "   'utterances': [\"Actually, it's still not syncing. I want to try something else.\"]}],\n",
+       " 'nodes': [{'id': 2,\n",
+       "   'label': 'identify_issue',\n",
+       "   'is_start': False,\n",
+       "   'utterances': [\"I'm sorry to hear you're experiencing a sync delay. Can you tell me more about the issue?\"]},\n",
+       "  {'id': 3,\n",
+       "   'label': 'ask_time_zone',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Could you verify that the time zone settings are properly configured on your devices?',\n",
+       "    'Have you checked if your time zone settings are correct on all your devices?']},\n",
+       "  {'id': 4,\n",
+       "   'label': 'provide_steps',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Sure, let me guide you through adjusting your time zone settings.']},\n",
+       "  {'id': 5,\n",
+       "   'label': 'alternative_solution',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['If time zone settings are correct, we can try refreshing the calendar app or reinstalling it.']},\n",
+       "  {'id': 6,\n",
+       "   'label': 'confirm_resolution',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Great! Is your calendar syncing correctly now?']},\n",
+       "  {'id': 7,\n",
+       "   'label': 'modify_time_zone',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Of course! Which device would you like to adjust the time zone settings on?']},\n",
+       "  {'id': 8,\n",
+       "   'label': 'exit_conversation',\n",
+       "   'is_start': False,\n",
+       "   'utterances': [\"I'm sorry we couldn't resolve the issue. If you need further assistance, feel free to reach out anytime. Have a great day!\"]}]}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[2]['graph']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph(data[0]['graph']).visualise_short(\"What\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:chromadb.telemetry.product.posthog:Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://193.187.173.33:8002/api/providers/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST http://193.187.173.33:8002/api/providers/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph has all the dialogues\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://193.187.173.33:8002/api/providers/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'is_same_structure': False,\n",
+       " 'graph_match': {'value': False,\n",
+       "  'description': 'Numbers of nodes do not match: 7 != 8'}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.invoke(data[2]['dialogues'], Graph(data[0]['graph']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://193.187.173.33:8002/api/providers/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph has all the dialogues\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = pipeline.invoke(data[0]['dialogues'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.visualise_short(\"graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph(data[0]['graph']).visualise_short(\"graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.invoke(data[0]['dialogues'], Graph(data[0]['graph']))"
    ]
   }
  ],
