Working on the example

--- a/examples/pipeline_usage/pipeline_example.ipynb
+++ b/examples/pipeline_usage/pipeline_example.ipynb
@@ -1,5 +1,16 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dialogue2graph.pipelines.model_storage import ModelStorage\n",
+    "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
