Bugfixes and pipeline example

--- a/examples/pipeline_usage/pipeline_example.ipynb
+++ b/examples/pipeline_usage/pipeline_example.ipynb
@@ -17,7 +17,37 @@
    ],
    "source": [
     "from dialogue2graph.pipelines.model_storage import ModelStorage\n",
-    "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline"
+    "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline as D2GLLMPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/askatasuna/Документы/DeepPavlov/chatsky-llm-autoconfig/dialogue2graph/pipelines/model_storage.py:60: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  model = HuggingFaceEmbeddings(**item.config)\n",
+      "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: BAAI/bge-m3\n"
+     ]
+    }
+   ],
+   "source": [
+    "ms = ModelStorage()\n",
+    "\n",
+    "pipe = D2GLLMPipeline(ms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.invoke()"
    ]
   }
  ],
