--- a/examples/pipeline_usage/pipeline_example.ipynb
+++ b/examples/pipeline_usage/pipeline_example.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pipeline Usage\n",
+    "\n",
+    "In this example we will show how to use Dialogue2Graph via python API.\n",
+    "\n",
+    "First of all we need to import the `ModelStorage` and `Pipeline` we will be using."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,6 +29,15 @@
    "source": [
     "from dialogue2graph.pipelines.model_storage import ModelStorage\n",
     "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline as D2GLLMPipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`ModelStorage` instance is used to store LLM and SentenceTransformer models and use cached variants to avoid multiple instances of the same model being up simultaneously.\n",
+    "\n",
+    "Each `Pipeline` has it's own default models, but you can override them by passing the key to the model you've added to the `ModelStorage`"
    ]
   },
   {
@@ -105,6 +125,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also you can load and dump the models with their configs to the `.yml` files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -119,6 +146,34 @@
    ],
    "source": [
     "ms.save(\"models_config.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d2g_llm_filling_llm:v1:\n",
+      "  name: o3-mini\n",
+      "  temperature: 1\n",
+      "d2g_llm_grouping_llm:v1:\n",
+      "  name: gpt-4o-latest\n",
+      "  temperature: 0\n",
+      "d2g_llm_sim_model:v1:\n",
+      "  model_kwargs:\n",
+      "    device: cpu\n",
+      "  model_name: cointegrated/LaBSE-en-ru\n",
+      "my_model:\n",
+      "  name: gpt-3.5-turbo\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat models_config.yml"
    ]
   }
  ],
